# RoBiMo_Trop_DataSet

./: .gitignore  Pipfile  README.md  _config.yml  index.md  pyproject.toml
html/: index.html  interactive_table.html  interactive_table.js
notebooks/: 00_Run_pipeline.ipynb  10_Extract_ArduPilot_data.ipynb  11_Extract_measurements.ipynb  20_Merge_robot_measurements.ipynb  21_Identify_measurement_positions.ipynb  22_Aggregate_key_parameter.ipynb  90_Generate_position_plots.ipynb  91_Plot_campaign_overview.ipynb  92_Generate_detailed_maps.ipynb  93_Provide_interactive_table.ipynb
notebooks/tmp/: 10_Extract_ArduPilot_data_run.ipynb  11_Extract_measurements_run.ipynb  20_Merge_robot_measurements_run.ipynb  21_Identify_measurement_positions_run.ipynb  22_Aggregate_key_parameter_run.ipynb  90_Generate_position_plots_run.ipynb  91_Plot_campaign_overview_run.ipynb  92_Generate_detailed_maps_run.ipynb  93_Provide_interactive_table_run.ipynb
preproc_data/ardupilot/: 010323-134619-AP.p  010323-182204-AP.p  010323-212223-AP.p  020323-094002-AP.p  020323-132955-AP.p  030323-104517-AP.p  030323-220439-AP.p  040323-112700-AP.p  060323-102818-AP.p  060323-131115-AP.p  070323-101810-AP.p  090323-101520-AP.p  090323-105825-AP.p  090323-165002-AP.p  100323-114646-AP.p  100323-120140-AP.p  110323-202629-AP.p
preproc_data/measurements/: 010323-124406-ADC.p  010323-124506-ADC.p  010323-124617-ADC.p  010323-124643-ADC.p  010323-124959-ADC.p  010323-140717-ADC.p  010323-141917-ADC.p  (+113 more)
presentation/: liascript.md  style.css
results/: cluster_positions_2023.p  key_parameter_2023.p
(+6 files in other folders)
